Enable key word search
